# jbcs2025

./: .access_tokens  .gitignore  README.md  emissions_analysis.ipynb  pyproject.toml
analysis_results/: efficiency_rankings.csv  emissions_summary.csv  model_family_statistics.csv
configs/: config.yaml  hub_models_list.txt  push_model_config.yaml  sequential_experiments.yaml  sequential_inference_example.yaml
configs/experiments/api_models_llm/: C1.yaml  C2.yaml  C3.yaml  C4.yaml  C5.yaml
configs/experiments/api_models_reasoning/: C1.yaml  C2.yaml  C3.yaml  C4.yaml  C5.yaml
configs/experiments/base_models/: C1.yaml  C2.yaml  C3.yaml  C4.yaml  C5.yaml
metrics/: metrics.py
models/api_models/: api_inference.py  open_ai_api.py
models/fine_tuning_models/: classification_head.py  model.py  model_factory.py  model_types_enum.py
scripts/: batch_inference_from_hub.py  batch_push_models.py  fine_tuning.py  generate_hub_models_list.py  preprocess.py  push_model_to_hub.py  run_experiment.py  run_inference_experiment.py  run_sequential_experiments.py
studies/: context_comparison_analysis.ipynb  encoder_analysis.ipynb  error_analysis.ipynb  guideline_type_analysis.ipynb  inference_pipeline.ipynb  results_analysis.ipynb  tokenization_analysis.ipynb
studies/data/: ci_mf1_encoder.csv  ci_mf1_prompt_type.csv  ci_qwk_encoder.csv  ci_qwk_prompt_type.csv  ci_wf1_encoder.csv  ci_wf1_prompt_type.csv  emissions_experiment.csv
trainer/: prediction_decoder.py  weighted_class_trainer.py
trainer/loss_strategy/: cross_entropy_strategy.py  loss_strategy.py
utils/gpu/: estimate_gpu_size.py
utils/logger/: additional_logging.py
utils/secrets/: secret_manager.py
(+44 files in other folders)
