[project]
name = "jbcs2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "flash-attn>=2.7.4.post1",
    "hydra-core>=1.3.2",
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "openai>=1.63.2",
    "peft>=0.14.0",
    "scikit-learn>=1.6.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.48.2",
]
