[project]
name = "jbcs2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "aiohttp==3.11.3",
    "coral-pytorch>=1.4.0",
    "datasets>=3.2.0",
    "huggingface-hub>=0.29.3",
    "hydra-core>=1.3.2",
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.48.2",
    "uv>=0.6.9",
]
